# kicad-source-mirror

./: .gitignore  CMakeLists.txt  install_dependencies.bat
chemlayout/: CMakeLists.txt  chem_edit_frame.cpp  chem_edit_frame.h  chem_layout.cpp  chem_layout.h  chem_layout_frame.cpp  chem_layout_frame.h  chem_layout_item.cpp  chem_layout_item.h  chem_layout_view.cpp  chem_layout_view.h  chem_plant.cpp  chem_plant.h  chemlayout.cpp  chemlayout_settings.cpp  chemlayout_settings.h  layout_edit_frame.cpp  layout_edit_frame.h  layout_view.cpp  layout_view.h
chemlayout/dialogs/: dialog_chem_properties.cpp  dialog_chem_properties.h  dialog_pipe_properties.cpp  dialog_pipe_properties.h  dialog_reactor_properties.cpp  dialog_reactor_properties.h
chemschema/: CMakeLists.txt  chem_actions.cpp  chem_actions.h  chem_base_frame.cpp  chem_base_frame.h  chem_collectors.cpp  chem_collectors.h  chem_connection.cpp  chem_connection.h  chem_draw_panel.cpp  chem_draw_panel.h  chem_edit_frame.cpp  chem_edit_frame.h  chem_frame.cpp  chem_frame.h  chem_includes.h  chem_item.cpp  chem_item.h  chem_junction.cpp  chem_junction.h  chem_label.cpp  chem_label.h  chem_line.cpp  chem_line.h  chem_painter.cpp  chem_painter.h  chem_render_settings.cpp  chem_render_settings.h  chem_schematic.cpp  chem_schematic.h  chem_screen.cpp  chem_screen.h  chem_shape.cpp  chem_shape.h  chem_sheet.cpp  chem_sheet.h  chem_sheet_path.cpp  chem_sheet_path.h  chem_symbol.cpp  chem_symbol.h  (+14 more)
chemschema/dialogs/: dialog_chem_junction_properties.cpp  dialog_chem_junction_properties.h  dialog_chem_line_properties.cpp  dialog_chem_properties.h  dialog_chem_text_properties.cpp  dialog_chem_text_properties.h  dialog_edit_label.cpp  dialog_edit_label.h  dialog_symbol_properties.cpp  dialog_symbol_properties.h
chemschema/tools/: chem_actions.cpp  chem_actions.h  chem_connection_tool.cpp  chem_connection_tool.h  chem_drawing_tools.cpp  chem_drawing_tools.h  chem_editor_control.cpp  chem_editor_control.h  chem_inspection_tool.cpp  chem_inspection_tool.h  chem_measurement_tool.cpp  chem_measurement_tool.h  chem_move_tool.cpp  chem_move_tool.h  chem_placement_tool.cpp  chem_placement_tool.h  chem_selection.cpp  chem_selection.h  chem_selection_tool.cpp  chem_selection_tool.h
cmake/: Warnings.cmake
include/: frame_type.h  id.h  kiway.h
include/core/: typeinfo.h
kicad/dialogs/: panel_kicad_launcher.cpp
kicad/tools/: kicad_manager_actions.cpp  kicad_manager_actions.h  kicad_manager_control.cpp
